<resources>
    <string name="app_name">ToDoApp</string>
    <string name="button_goToReg">Регистрация</string>
    <string name="button_goToLog">Войти</string>
    <string name="buttonForget">Забыли пароль?</string>
    <string name="buttonCreateUser">Создать аккаунт</string>
    <string name="textView_todoapp">To-Do App</string>
    <string name="editTextEmailReg_hint">Адрес электронной почты</string>
    <string name="editTextNameReg_hint">Имя</string>
    <string name="editTextPassword_hint">Выберите пароль</string>
    <string name="editTextPasswordReg2">Подтверждение пароля</string>
    <string name="btn_addTask">Добавить задачу</string>
    <string name="btn_updateTask">Изменить задачу</string>
    <string name="action_deleteAll">Удалить все задачи</string>
    <string name="action_search">Поиск</string>
    <string name="action_priority">Сортировка задач</string>
    <string name="edit_task">напр., прибраться</string>
    <string name="btn_forget">Восстановить</string>
    <string name="toolbar_forget">Восстановление пароля</string>
    <string name="toolbar_log">Авторизация</string>
    <string name="toolbar_reg">Регистрация</string>
    <string name="action_sync">Синхронизация</string>
    <string name="settings_name">Настройки</string>
    <string name="btn_acc_set">Аккаунт</string>
    <string name="btn_general_set">Основное</string>
    <string name="btn_exit_set">Выйти</string>

    <string name="open">Open</string>
    <string name="close">Close</string>

    <string-array name="priorities">
        <item>Высокий приоритет</item>
        <item>Средний приоритет</item>
        <item>Низкий приоритет</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="drawer_open">Open Drawer</string>
    <string name="drawer_close">Close Drawer</string>
</resources>