<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".signup.LoginActivity">

    <Button
        android:id="@+id/buttonLog"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="206dp"
        android:text="@string/button_goToLog"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="@+id/buttonForget" />

    <EditText
        android:id="@+id/editTextEmailLog"
        android:layout_width="280dp"
        android:layout_height="0dp"
        android:layout_marginStart="52dp"
        android:layout_marginTop="108dp"
        android:ems="10"
        android:hint="@string/editTextEmailReg_hint"
        android:inputType="textEmailAddress"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editTextPasswordLog"
        android:layout_width="276dp"
        android:layout_height="56dp"
        android:layout_marginStart="58dp"
        android:layout_marginTop="61dp"
        android:ems="10"
        android:hint="@string/editTextPassword_hint"
        android:inputType="textPassword"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextEmailLog" />

    <Button
        android:id="@+id/buttonForget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="92dp"
        android:background="?attr/selectableItemBackground"
        android:text="@string/buttonForget"
        android:textColor="@color/main"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>