<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <EditText
            android:id="@+id/edit_emailForget"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/editTextEmailReg_hint"
            android:inputType="textEmailAddress"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_forget" />

        <EditText
            android:id="@+id/edit_nameForget"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:fontFamily="@font/roboto"
            android:hint="@string/editTextNameReg_hint"
            android:inputType="text"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_emailForget" />

        <Button
            android:id="@+id/btn_forget"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:fontFamily="@font/roboto"
            android:text="@string/btn_forget"
            android:textAllCaps="false"
            android:textSize="20sp"
            android:backgroundTint="@color/button_inactive"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_forget"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:titleTextColor="@color/black"
            app:title="@string/toolbar_forget"
            app:titleMarginStart="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_back_forget"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <EditText
            android:id="@+id/edit_passForget"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:background="@drawable/custom_edittext"
            android:ems="10"
            android:hint="@string/editTextPassword_hint"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_nameForget" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>