<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white"
        tools:context=".signup.LoginFragment">

        <Button
            android:id="@+id/btn_log"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="16dp"
            android:backgroundTint="@color/button_inactive"
            android:fontFamily="@font/roboto"
            android:text="@string/button_goToLog"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.498"
            app:layout_constraintStart_toStartOf="parent" />

        <EditText
            android:id="@+id/edit_emailLog"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/roboto"
            android:hint="@string/editTextEmailReg_hint"
            android:inputType="textEmailAddress"
            android:textSize="18sp"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.496"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_log" />

        <EditText
            android:id="@+id/edit_passwordLog"
            android:layout_width="0dp"
            android:layout_height="60dp"
            android:layout_marginStart="32dp"
            android:layout_marginTop="32dp"
            android:layout_marginEnd="32dp"
            android:ems="10"
            android:background="@drawable/custom_edittext"
            android:fontFamily="@font/roboto"
            android:hint="@string/editTextPassword_hint"
            android:inputType="textPassword"
            android:paddingStart="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_emailLog" />

        <Button
            android:id="@+id/btn_fgt"
            android:layout_width="200dp"
            android:layout_height="60dp"
            android:layout_marginTop="32dp"
            android:background="?attr/selectableItemBackground"
            android:fontFamily="@font/roboto"
            android:text="@string/buttonForget"
            android:textAllCaps="false"
            android:textColor="@color/main"
            android:textSize="18sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/edit_passwordLog" />

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_log"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:stateListAnimator="@null"
            app:title="@string/toolbar_log"
            app:titleTextColor="@color/black"
            app:titleMarginStart="60dp"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_back_log"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>