<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main"
        tools:context=".MainActivity">

        <Button
            android:id="@+id/button_goToReg"
            android:layout_width="130dp"
            android:layout_height="60dp"
            android:layout_marginStart="50dp"
            android:layout_marginBottom="100dp"
            android:backgroundTint="@color/button_inactive"
            android:text="@string/button_goToReg"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/button_goToLog"
            android:layout_width="130dp"
            android:layout_height="0dp"
            android:layout_marginEnd="50dp"
            android:layout_marginBottom="101dp"
            android:backgroundTint="@color/button_inactive"
            android:text="@string/button_goToLog"
            android:textSize="12sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/button" />

        <TextView
            android:id="@+id/textView_todoapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:gravity="center_horizontal"
            android:text="@string/textView_todoapp"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="277dp"
            android:layout_marginBottom="117dp"
            android:text="Button"
            app:layout_constraintBottom_toTopOf="@+id/button_goToLog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>