<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".settings.SettingsFragment">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar_settings"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:minHeight="?attr/actionBarSize"
            android:theme="?attr/actionBarTheme"
            app:title="@string/settings_name"
            app:titleTextColor="@color/black"
            app:titleMarginStart="60dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageView
            android:id="@+id/btn_back_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_arrow_back" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_acc_set"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:fontFamily="@font/roboto"
            android:insetLeft="0dp"
            android:text="@string/btn_acc_set"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/ic_account_circle"
            app:iconGravity="textStart"
            app:iconTint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/toolbar_settings" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_general_set"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:fontFamily="@font/roboto"
            android:insetLeft="0dp"
            android:text="@string/btn_general_set"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/ic_settings"
            app:iconGravity="textStart"
            app:iconTint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_acc_set" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_exit_set"
            style="@style/Widget.AppCompat.Button.Borderless"
            android:layout_width="0dp"
            android:layout_height="52dp"
            android:fontFamily="@font/roboto"
            android:insetLeft="0dp"
            android:text="@string/btn_exit_set"
            android:textAlignment="viewStart"
            android:textAllCaps="false"
            android:textColor="@color/black"
            android:textSize="18sp"
            app:icon="@drawable/ic_exit_to_acc"
            app:iconGravity="textStart"
            app:iconTint="@android:color/darker_gray"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/btn_general_set" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>