<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/main"
        tools:context=".signup.IntroFragment">

        <Button
            android:id="@+id/btn_goToReg"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="32dp"
            android:backgroundTint="@color/button_inactive"
            android:fontFamily="@font/roboto"
            android:includeFontPadding="false"
            android:text="@string/button_goToReg"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textIsSelectable="false"
            android:textSize="20sp"
            android:textStyle="normal"
            app:layout_constraintBottom_toTopOf="@+id/btn_goToLog"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <Button
            android:id="@+id/btn_goToLog"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginStart="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="128dp"
            android:backgroundTint="@color/button_inactive"
            android:fontFamily="@font/roboto"
            android:text="@string/button_goToLog"
            android:textAllCaps="false"
            android:textSize="20sp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_todoapp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="110dp"
            android:gravity="center_horizontal"
            android:text="@string/textView_todoapp"
            android:textColor="@color/white"
            android:textSize="36sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.5"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <Button
            android:id="@+id/btn_test"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="Test"
            android:backgroundTint="@color/button_inactive"
            app:layout_constraintBottom_toTopOf="@+id/btn_goToReg"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>